# simple-siteproject-django-docker-poetry-postgresql

./: .env.example  .gitignore  docker-compose.yaml
site_shop/: .dockerignore  Dockerfile  db.sqlite3  manage.py  pyproject.toml
site_shop/fixtures/goods/: categories.json  products.json
site_shop/goods/: admin.py  models.py  urls.py  utils.py  views.py
site_shop/goods/templates/goods/: catalog.html  product.html
site_shop/goods/templatetags/: goods_tags.py
site_shop/shop/: models.py  urls.py  views.py
site_shop/shop/static/shop/: style.css
site_shop/shop/templates/shop/: about.html  categories.html  contact.html  index.html
site_shop/shop/templates/shop/includes/: footer.html  nav.html
site_shop/site_shop/: asgi.py  settings.py  urls.py  wsgi.py
site_shop/templates/: base.html
site_shop/templates/includes/: filter.html  footer.html  nav.html  pagination.html
