[project]
name = "siteproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Vyfme",email = "yaskpenta248@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "django-debug-toolbar (>=6.1.0,<7.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "psycopg-binary (>=3.2.12,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-active-link (>=0.3.0,<0.4.0)",
]

[tool.poetry]
packages = [{include = "siteproject", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
